--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -48,22 +48,22 @@
 
 <div class="streamlist"> 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">San Marino VS Malta</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2">Cyprus VS Northern Ireland</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">Gibraltar VS North Macedonia</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Czech Republic VS Spain</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/5">Portugal VS Switzerland</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/6">Serbia VS Slovenia</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/7">Sweden VS Norway</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/8">Kosovo VS Greece</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/9">Bulgaria VS Georgia</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/10">Wales VS Ukraine</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/11">Egypt VS Guinea</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Japan VS Brazil</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">South Korea VS Chile</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Latvia VS Liechtenstein</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Austria VS Denmark</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Croatia VS France</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/6">Iceland VS Albania</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/7">Belarus VS Azerbaijan</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/8">Slovakia VS Kazakhstan</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/9">Andorra VS Moldova</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/10">Equatorial Guinea VS Libya</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/11">Egypt VS Guinea</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/12">Peru VS New Zealand</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/14">USA VS Uruguay</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/15">Canada VS Panama</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/16">Mexico VS Ecuador</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/16">Mexico VS Ecuador</a></h1> -->
     <h3><strong>Close any Popup ads and Cancel any downloads. These links are confirmed working and are tested regularly!</strong></h3>
 <div class="bnavbar">
         <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
