--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -25,9 +25,6 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-
-        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5336766819536959"
-                crossorigin="anonymous"></script> -->
         <meta charset="utf-8">
         <link rel="stylesheet" href="api-football.css">
         <title>Footballify</title>
@@ -59,17 +56,17 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
 
-    <h1>San Marino VS Malta</h1>
-    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+    <h1>Japan VS Brazil</h1>
+    <h2><a class="gamelinks" href="https://footybite.to/pan-vs-br/" target="_blank">Link 1</a></h2>
+        <h2><a class="gamelinks" href="https://nowagoal2.xyz/page/Coyotes.php" target="_blank">Link 2</a></h2>
+        <h2><a class="gamelinks" href="http://sportsio.xyz/japan-brazil/" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="http://tvtoss.club/buffer/atlantavshawks.php" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="https://sport2watch.xyz/live/8216-s1&utm_source=10098sports.php" target="_blank">Link 5</a></h2>
+        <h2><a class="gamelinks" href="https://dubs6k.xyz/embed/webplayer=ifr&c=7891343&lang=en&eid=922571&lid=1377698&fwm.php" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="https://sport2watch.xyz/live/8216-s1&utm_source=10098sports.php" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="http://tvtoss.club/buffer/atlantavshawks.php" target="_blank">Link 8</a></h2>
+        <h2><a class="gamelinks" href="http://sportsio.xyz/japan-brazil/" target="_blank">Link 9</a></h2>
+        <h2><a class="gamelinks" href="https://nowagoal2.xyz/page/Coyotes.php" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
 
 </div>
