--- a/livestreams/4/index.html
+++ b/livestreams/4/index.html
@@ -56,7 +56,7 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Austria VS Denmark</h1>
-    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/austria-vs-denmark-s1/" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
     <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
