--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -49,12 +49,12 @@
 <div class="streamlist"> 
 
     <style>
-body{font-family:Arial,Helvetica,sans-serif}.modal{display:none;position:fixed;z-index:1;padding-top:100px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.4)}.modal-content{position:relative;background-color:#fefefe;margin:auto;padding:0;border:1px solid #888;width:80%;box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);-webkit-animation-name:animatetop;-webkit-animation-duration:.4s;animation-name:animatetop;animation-duration:.4s}@-webkit-keyframes animatetop{from{top:-300px;opacity:0}to{top:0;opacity:1}}@keyframes animatetop{from{top:-300px;opacity:0}to{top:0;opacity:1}}.close{color:#fff;float:right;font-size:28px;font-weight:700}.close:hover,.close:focus{color:#000;text-decoration:none;cursor:pointer}.modal-header{padding:2px 16px;background-color:#5cb85c;color:#fff}.modal-body{padding:2px 16px}.modal-footer{padding:2px 16px;background-color:#5cb85c;color:#fff}
+body{font-family:Arial,Helvetica,sans-serif}.modal{display:none;position:fixed;z-index:1;padding-top:100px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.4)}.modal-content{position:relative;background-color:#fefefe;margin:auto;padding:0;width:80%;box-shadow:0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);-webkit-animation-name:animatetop;-webkit-animation-duration:.4s;animation-name:animatetop;animation-duration:.4s}@-webkit-keyframes animatetop{from{top:-300px;opacity:0}to{top:0;opacity:1}}@keyframes animatetop{from{top:-300px;opacity:0}to{top:0;opacity:1}}.close{color:#fff;float:right;font-size:28px;font-weight:700}.close:hover,.close:focus{color:#000;text-decoration:none;cursor:pointer}.modal-header{padding:2px 16px;background-color:#5cb85c;color:#fff}.modal-body{padding:2px 16px}
         </style>
         </head>
         <body>        
         <!-- Trigger/Open The Modal -->
-        <h1>We Recommend You Read Our <a id="myBtn">Safety Rules</a> So You Are Safe While Using Our Site!</h1>
+        <h1 class="safety">We Recommend You Read Our <a class="safety" id="myBtn">Safety Rules</a> So You Are Safe While Using Our Site!</h1>
         
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -69,7 +69,7 @@ body{font-family:Arial,Helvetica,sans-serif}.modal{display:none;position:fixed;z
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <h3><strong>We Want You To Be Safe On Our Site, Please Read Below To Stay Safe!</strong></h3>
-                    <h1>Hello, our site uses pop-up ads to pay for server costs. Unfortunately, we cannot see what ads are on our site. Ads will open
+                    <h1 class="safetyText">Hello, our site uses pop-up ads to pay for server costs. Unfortunately, we cannot see what ads are on our site. Ads will open
                            When you click on any of the links for a game. Most of the time a new tab will be opened with an ad on it, Close this tab 
                            and go back to our site and you will be able to click the Links to the games. Occasionally a download will start, which is
                            nothing to worry about. Simply cancel or delete the download and you will be safe. We have tried and tested the safety of this site
