--- a/index.html
+++ b/index.html
@@ -49,33 +49,33 @@
                         <div class="newsel">
                             <div class = 'league addborder'>Football News</div>
                              <div class="imgcont">
-                                <img class="newsimg" src="https://e0.365dm.com/22/06/2048x1152/skysports-lionel-messi-argentina_5796389.jpg">
-                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong>Messi and Ronaldo Both Impress, Wales Book Spot After 1-0 Win Against Ukraine, Norway and Serbia Win!</h1>
+                                <img class="newsimg" src="https://i.guim.co.uk/img/media/cfa04a169ef8ed1e40864b4667c353ab74e06f68/0_0_3000_1800/master/3000.jpg?width=445&quality=45&auto=format&fit=max&dpr=2&s=c551b3f723892304a4a3ca90ec473619">
+                                <h1 class = "innerText"><strong>Daily Footballify Round-Up:</strong>France And Croatia Play Out Draw, Denmark Beats Austria After Delayed Start, Kazakhstan And Latvia Win!</h1>
                              </div>
-                             <!-- <a class="blueLink" href="https://footballify.net/news/"> Read Here!</a>                                                                                                 fef -->
+                             <!-- <a class="blueLink" href="https://streamff.com/v/b72815"> Read Here!</a>                                                                                                 fef -->
                             </div>
                         <hr class="roundedBar"> 
 
                         <div class="newsel">
                              <div class="imgcont">
-                                <img class="newsimg square" src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/bltb569dbc05e80926b/619024f198a5b30ff43c2dbc/GettyImages-1236544866(1).jpg">
-                                <h1 class = "innerText"><strong>Footballify Forecast:</strong> Croatia, France Meet For World Cup Rematch, Japan Play Brazil In Friendly, Austria, Denmark, Albania, Iceland In Action!</h1>
+                                <img class="newsimg square" src="https://static.standard.co.uk/2021/06/23/06/SOCCER%20England%20202309.jpg?width=1200">
+                                <h1 class = "innerText"><strong>Footballify Forecast:</strong> Germany, England Play Huge Match, Italy Plays Hungary, UAE Plays Austrailia For World Cup Spot!</h1>
                              </div>
                             </div>
                         <hr class="roundedBar"> 
 
                         <div class="newsel">
                             <div class="imgcont">
-                               <img class="newsimg square" src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/bltad70618cf539578b/629373aa7c560a0f7c5eddce/Mane.jpg">
-                               <h1 class = "innerText"><strong>Footballify Transfer Talk:</strong> Mane And Salah involved In Transfer Talks As Their Contracts Approach End, Ajax Want Bergwijn, Mourinho To PSG!</h1>
+                               <img class="newsimg square" src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/bltb3190eac5e0819b4/62650f53234cf04ce5461098/Angel_Di_Maria_Argentina_2022.jpg?auto=webp&format=jpg&quality=60&width=1280">
+                               <h1 class = "innerText"><strong>Footballify Transfer Talk:</strong> Di Maria Open To Barcelona Transfer, Bayern Negotiates For Mane, Ajax Want Bergwijn, Mourinho To PSG!</h1>
                             </div>
                            </div>
                        <hr class="roundedBar"> 
 
                        <div class="newsel">
                         <div class="imgcont">
-                           <img class="newsimg square" src="https://www.irishtimes.com/resizer/wdf18ub3ChMUciEtPjIJ4UjqmZ8=/1600x1200/filters:format(jpg):quality(70)/cloudfront-eu-central-1.images.arcpublishing.com/irishtimes/4ZMOFULBPI4ZY35JV2I23KXLW4.jpg">
-                           <h1 class = "innerText"><strong>Footballify GOTD:</strong>Joao Cancelo Scores Amazing Goal From Outside The Foot Bernardo Silva Pass Winning Goal Of The Day!</h1>
+                           <img class="newsimg square" src="https://dec5d6x1eivq1.cloudfront.net/uploads/2022/06/frd57wtjilbe8u8mbpiep4rkpzu-930x523.jpg">
+                           <h1 class = "innerText"><strong>Footballify GOTD:</strong>Jens Stryger Larsen Curls In Beautiful Late Winner For Denmark Winning Goal Of The Day!<a class="blueLink" href="https://streamff.com/v/b72815"> See Here!</a></h1>
                         </div>
                        </div>
                    <hr class="roundedBar"> 
