--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -53,17 +53,17 @@
 <script>var modal = document.getElementById("myModal");var btn = document.getElementById("myBtn");var span = document.getElementsByClassName("close")[0];btn.onclick = function() {modal.style.display = "block";};span.onclick = function() {modal.style.display = "none";};window.onclick = function(event) {if (event.target == modal) {modal.style.display = "none";}}</script>
 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Japan VS Brazil</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2">South Korea VS Chile</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">Latvia VS Liechtenstein</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Austria VS Denmark</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/5">Croatia VS France</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/6">Iceland VS Albania</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/7">Belarus VS Azerbaijan</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/8">Slovakia VS Kazakhstan</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Finland VS Montenegro</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">United Arab Emirates VS Austrailia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Germany VS England</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Italy VS Hungary</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Bosnia & Herezegovina VS Romania</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/6">Faroe Islands VS Luxembourg</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/7">Lithuania VS Turkey</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/8">Slovakia VS Kazakhstan</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Andorra VS Moldova</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Equatorial Guinea VS Libya</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/11">Egypt VS Guinea</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/11">Egypt VS Guinea</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/12">Peru VS New Zealand</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/14">USA VS Uruguay</a></h1>
