--- a/livestreams/6/index.html
+++ b/livestreams/6/index.html
@@ -55,17 +55,17 @@
 <div class="adflylinks">
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
-        <h1>Iceland VS Albania</h1>
-        <h2><a class="gamelinks" href="https://footybite.to/eland-vs-alba/" target="_blank">Link 1</a></h2>
-        <h2><a class="gamelinks" href="https://sport2watch.xyz/live/8216-s1&utm_source=1007sports.php" target="_blank">Link 2</a></h2>
-        <h2><a class="gamelinks" href="http://tvtoss.club/buffer/cleveland-cavaliers.php" target="_blank">Link 3</a></h2>
-        <h2><a class="gamelinks" href="https://dubs6k.xyz/embed/webplayer=ifr&c=9632369&lang=en&eid=922571&lid=1377698&fwm.php" target="_blank">Link 4</a></h2>
-        <h2><a class="gamelinks" href="https://buddycenter.xyz/watch_38744.php" target="_blank">Link 5</a></h2>
-        <h2><a class="gamelinks" href="https://nowagoal2.xyz/page/Ludogorets.php" target="_blank">Link 6</a></h2>
-        <h2><a class="gamelinks" href="http://sportsio.xyz/iceland-albania/" target="_blank">Link 7</a></h2>
-        <h2><a class="gamelinks" href="https://footybite.to/eland-vs-alba/" target="_blank">Link 8</a></h2>
-        <h2><a class="gamelinks" href="http://tvtoss.club/buffer/cleveland-cavaliers.php" target="_blank">Link 9</a></h2>
-        <h2><a class="gamelinks" href="https://buddycenter.xyz/watch_38744.php" target="_blank">Link 10</a></h2>
+        <h1>Faroe Islands VS Luxembourg</h1>
+        <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
 
 </div>
