--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                        <div class="newsel">
                         <div class="imgcont">
                            <img class="newsimg square" src="https://dec5d6x1eivq1.cloudfront.net/uploads/2022/06/frd57wtjilbe8u8mbpiep4rkpzu-930x523.jpg">
-                           <h1 class = "innerText"><strong><a class="blueLink" href="https://streamff.com/v/b72815">Footballify GOTD:</a></strong>Jens Stryger Larsen Curls In Beautiful Late Winner For Denmark Winning Goal Of The Day!</h1>
+                           <h1 class = "innerText"><strong><a class="blueLink" href="https://streamff.com/v/b72815" target="_blank">Footballify GOTD:</a></strong>Jens Stryger Larsen Curls In Beautiful Late Winner For Denmark Winning Goal Of The Day!</h1>
                         </div>
                        </div>
                    <hr class="roundedBar"> 
