--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -60,11 +60,11 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/5">Bosnia & Herezegovina VS Romania</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/6">Faroe Islands VS Luxembourg</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/7">Lithuania VS Turkey</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/8">Slovakia VS Kazakhstan</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/9">Andorra VS Moldova</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/10">Equatorial Guinea VS Libya</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/11">Egypt VS Guinea</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/12">Peru VS New Zealand</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/8">Eswatini VS Burkina Faso</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/9">Zambia VS Comoros</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/10">Cape Verde VS Togo</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/11">Rwanda VS Senegal</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/12">Peru VS New Zealand</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/14">USA VS Uruguay</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/15">Canada VS Panama</a></h1>
