--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -57,8 +57,8 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/2">Wales VS Netherlands</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/3">Ireland VS Ukraine</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/4">Scotland VS Armenia</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/5">Bosnia & Herezegovina VS Romania</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/6">Faroe Islands VS Luxembourg</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Sudan VS DR Congo</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/6">Faroe Islands VS Luxembourg</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/7">Lithuania VS Turkey</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Eswatini VS Burkina Faso</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">Zambia VS Comoros</a></h1>
