--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -53,17 +53,17 @@
 <script>var modal = document.getElementById("myModal");var btn = document.getElementById("myBtn");var span = document.getElementsByClassName("close")[0];btn.onclick = function() {modal.style.display = "block";};span.onclick = function() {modal.style.display = "none";};window.onclick = function(event) {if (event.target == modal) {modal.style.display = "none";}}</script>
 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Belgium VS Poland</a></hi>
-    <h1 class="games"><a href="http://footballify.net/livestreams/2">Wales VS Netherlands</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/3">Ireland VS Ukraine</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Scotland VS Armenia</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/5">Sudan VS DR Congo</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/6">Faroe Islands VS Luxembourg</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/7">Lithuania VS Turkey</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/8">Eswatini VS Burkina Faso</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/9">Zambia VS Comoros</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/10">Cape Verde VS Togo</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/11">Rwanda VS Senegal</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Guinea-Bissau VS Sao Tome & Principe</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">Portugal VS Czech Republic</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Spain VS Switzerland</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Norway VS Slovenia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/5">Sweden VS Serbia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/6">Greece VS Cyprus</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/7">Kosovo VS Northern Ireland</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/8">Gibraltar VS Bulgaria</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/9">North Macedonia VS Georgia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/10">Malta VS Estonia</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/11">Rwanda VS Senegal</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/12">Peru VS New Zealand</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/14">USA VS Uruguay</a></h1>
