--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -63,9 +63,9 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Gibraltar VS Bulgaria</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">North Macedonia VS Georgia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Malta VS Estonia</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/11">Rwanda VS Senegal</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/12">Peru VS New Zealand</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/11">Burundi VS Cameroon</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/12">South Sudan VS Mali</a></h1>
+    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/14">USA VS Uruguay</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/15">Canada VS Panama</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/16">Mexico VS Ecuador</a></h1> -->
