--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -53,7 +53,7 @@
 <script>var modal = document.getElementById("myModal");var btn = document.getElementById("myBtn");var span = document.getElementsByClassName("close")[0];btn.onclick = function() {modal.style.display = "block";};span.onclick = function() {modal.style.display = "none";};window.onclick = function(event) {if (event.target == modal) {modal.style.display = "none";}}</script>
 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a href="http://footballify.net/livestreams/1">Guinea-Bissau VS Sao Tome & Principe</a></hi>
+    <h1>UEFA Nations League</h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/2">Portugal VS Czech Republic</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/3">Spain VS Switzerland</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/4">Norway VS Slovenia</a></h1>
@@ -63,12 +63,16 @@
     <h1 class="games"><a href="http://footballify.net/livestreams/8">Gibraltar VS Bulgaria</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/9">North Macedonia VS Georgia</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/10">Malta VS Estonia</a></h1>
+    <h1>Africa Cup Of Nations</h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/11">Burundi VS Cameroon</a></h1>
     <h1 class="games"><a href="http://footballify.net/livestreams/12">South Sudan VS Mali</a></h1>
-    <!-- <h1 class="games"><a href="http://footballify.net/livestreams/13">Argentina VS Estonia</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/14">USA VS Uruguay</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/15">Canada VS Panama</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/16">Mexico VS Ecuador</a></h1> -->
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Guinea-Bissau VS Sao Tome & Principe</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/13">Nigeria VS Sierra Leone</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/14">Guinea VS Malawi</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/15">Ethiopia VS Egypt</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/16">Lesoto VS Ivory Coast</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/17">Morocco VS South Africa</a></h1>
+
     <h3><strong>Close any Popup ads and Cancel any downloads. These links are confirmed working and are tested regularly!</strong></h3>
 <div class="bnavbar">
         <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
