--- a/livestreams/3/index.html
+++ b/livestreams/3/index.html
@@ -57,14 +57,14 @@
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Spain VS Switzerland</h1>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="https://1.vecdn.pw/ch8.php" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="https://1.vecdn.pw/ch5.php" target="_blank">Link 3</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 4</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="https://1.vecdn.pw/ch5.php" target="_blank">Link 6</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 7</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="https://1.vecdn.pw/ch8.php" target="_blank">Link 9</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/switzerland-vs-spain-s2/" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
 
