--- a/livestreams/8/index.html
+++ b/livestreams/8/index.html
@@ -56,16 +56,16 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
         <h1>Gibraltar VS Bulgaria</h1>
-        <h2><a class="gamelinks" href="https://footybite.to/mercedes-cup/" target="_blank">Link 1</a></h2>
-        <h2><a class="gamelinks" href="http://tvtoss.club/buffer/washington-wizards.php" target="_blank">Link 2</a></h2>
-        <h2><a class="gamelinks" href="https://1.vecdn.pw/ch23.php" target="_blank">Link 3</a></h2>
-        <h2><a class="gamelinks" href="https://footybite.to/mercedes-cup/" target="_blank">Link 4</a></h2>
-        <h2><a class="gamelinks" href="https://footybite.to/mercedes-cup/" target="_blank">Link 5</a></h2>
-        <h2><a class="gamelinks" href="https://footybite.to/mercedes-cup/" target="_blank">Link 6</a></h2>
-        <h2><a class="gamelinks" href="http://tvtoss.club/buffer/washington-wizards.php" target="_blank">Link 7</a></h2>
-        <h2><a class="gamelinks" href="https://1.vecdn.pw/ch23.php" target="_blank">Link 8</a></h2>
-        <h2><a class="gamelinks" href="https://footybite.to/mercedes-cup/" target="_blank">Link 9</a></h2>
-        <h2><a class="gamelinks" href="https://footybite.to/mercedes-cup/" target="_blank">Link 10</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, Cancel any Downloads, these links are confirmed safe and working and are tested regularly!</strong></h3>
         <div class="bnavbar">
             <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
